--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^15.5.4",
     "react-router": "^3.0.5",
     "react-router-dom": "^4.1.1",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
   },
   "scripts": {
     "start": "react-scripts start",
