--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^3.0.5",
     "react-router-dom": "^4.1.1",
     "react-scripts": "0.9.5",
+    "react-svg": "^2.1.21"
   },
   "scripts": {
     "start": "react-scripts start",
